--- a/Logis_database/Encountered_issue/2025_12_05.md
+++ b/Logis_database/Encountered_issue/2025_12_05.md
@@ -12,7 +12,7 @@
 2. 외부 스토리지(S3 ,GoogleDrive) 활용
 3. docker compose..?
 --- 
-
+### <테이블 timeout>
 ##### 상황
 - 풀스캔 진행 후 에러 발생
 - Error Code: 2013. Lost connection to MySQL server during query
