--- a/Logis_database/Encountered_issue/2025_12_05.md
+++ b/Logis_database/Encountered_issue/2025_12_05.md
@@ -1,24 +1,21 @@
 ### <Github 단일 파일 제한 100MB>
-##### 상황 
-- .sql 파일을 깃을 통해 주고 받다가 100MB 가 넘어서자 Git에서 파일 용량 한계
 
-##### 고찰
-1. git lfs(large file storage) - 무료한계
-2. 파일 압축
+- sql 파일을 깃을 통해 주고 받다가 100MB 가 넘어서자 Git에서 파일 용량 한계
 
+> git lfs(large file storage) - 무료한계
+파일 압축
 ##### 결론
 - DB 데이터 git에 포함은 안티패턴
 1. 소스코드에는 데이터 자체가 아닌 스키마(데이터 구조)코드만 올리자.
 2. 외부 스토리지(S3 ,GoogleDrive) 활용
 3. docker compose..?
+
 --- 
 ### <테이블 timeout>
-##### 상황
 - 풀스캔 진행 후 에러 발생
 - Error Code: 2013. Lost connection to MySQL server during query
 
-##### 고찰
-- 인덱스 회피트릭설정->풀테이블스캔 -> 쿼리 실행시간 time
+>인덱스 회피트릭설정->풀테이블스캔 -> 쿼리 실행시간 time
 ##### 결론
 - 타임아웃 늘리기 가능
 - 인덱스의 성능 체감...엄청난!
