--- a/All_major_minor_issue/Github/보안.md
+++ b/All_major_minor_issue/Github/보안.md
@@ -1,3 +1,4 @@
 ### 깃허브 커밋 주의할점
-- 데이터 베이스 절대x
->git ignore / eㄻㄷㅁ
+- 데이터베이스 절대 올리면 안됨
+- settings.py 의 비밀번호는 지우고 커밋
+>gitignore : 앞으로 추가되는 파일만 무시한다
