--- a/Logis_database/v1.0_issue.md
+++ b/Logis_database/v1.0_issue.md
@@ -11,11 +11,31 @@
 3. docker compose..?
 
 --- 
-### <테이블 timeout>
+### <테이블 timeout, 풀스캔 동작 원리>
 - 풀스캔 진행 후 에러 발생
 - Error Code: 2013. Lost connection to MySQL server during query
 
->인덱스 회피트릭설정->풀테이블스캔 -> 쿼리 실행시간 time
+##### 상황 검증
+- 풀스캔 동작과정 확인
+```sql
+SHOW GLOBAL STATUS LIKE 'Handler_read%';
+```
+- 위 코드 실행 시 Handler_read_rnd_next 값이 나옴
+Handler_read_rnd_next : 실제 읽은 행의 개수를 의미
+<br>
+- 정규화 테이블 구조 Handler_read_rnd_next 증가량
+→ 약 1억 ~ 2억 row 스캔, 이후 타임아웃
+<br>
+- 비정규화 테이블 구조 Handler_read_rnd_next 증가량
+→ 약 1000 row 스캔
+
 ##### 결론
+- 타임아웃 근본 원인은 풀 테이블 스캔
+
+- Handler_read_rnd_next 수치를 통해
+인덱스 사용 여부와 성능 차이가 수치로 명확히 확인됨
+
+- 인덱스 설계 및 테이블 구조(정규화/비정규화)에 따른
+성능 체감 차이는 압도적
 - 타임아웃 늘리기 가능
-- 인덱스의 성능 체감...엄청난!
+
