--- a/Logis_database/v1.1_PostgreSQL_시각화.md
+++ b/Logis_database/v1.1_PostgreSQL_시각화.md
@@ -4,6 +4,24 @@
 
 ##### 성능 테스트 및 지표 변화 (Dashboard Monitoring)
 
+##### Dashboard 에 나오는 지표
+
+- Database sessions
+→ 현재 DB에 연결된 세션 수와 실제로 일하는 세션 상태를 보여주는 지표
+
+- Transactions per second (TPS)
+→ DB가 초당 처리하는 트랜잭션 처리량 지표
+
+- Tuples in
+→ INSERT·UPDATE·DELETE로 DB에 실제로 변경된 행(row) 수
+
+- Tuples out
+→ 쿼리 수행 중 읽은 행과 결과로 반환된 행(Returned) 수를 나타내는 지표
+
+- Block I/O
+→ 데이터를 디스크에서 읽었는지(Reads) 메모리 캐시에서 읽었는지(Hits)를 보여주는 지표
+
+
 <img src="/Logis_database/images/postgre_dash_nor.png" alt="postgre_dashboard" width="600"/>
 
 **정규화 모델**
