도커_업데이트

--- a/All_major_minor_issue/Docker/장고_도커_사용법.md
+++ b/All_major_minor_issue/Docker/장고_도커_사용법.md
@@ -1,4 +1,4 @@
-### 장고에서 도커 사용
+### 장고에서 도커 사용  <실행: docker-compose up --build>
 
 1. 폴더 임의 생성
 ```
@@ -61,7 +61,59 @@ ALLOWED_HOSTS = ["*"]
 ```
 (Docker에서는 필수로 모두 허용해야함)
 
-7. Docker로 Django 실행
+7. **Docker로 Django 실행**
 ```
 docker-compose up --build
 ```
+
+---
+8. (.env 보안적용 깃허브)
+```
+pip install python-dotenv
+pip freeze > requirements.txt
+```
+9. .env 파일 만들기
+```
+DEBUG=True
+SECRET_KEY=django-secret-key-change-me
+ALLOWED_HOSTS=localhost,127.0.0.1
+```
+
+10. .gitignore에 .env 추가
+
+.env
+
+11. settings.py 파일에서 설정
+
+config/settings.py  상단에 추가
+```
+import os
+from pathlib import Path
+from dotenv import load_dotenv
+
+BASE_DIR = Path(__file__).resolve().parent.parent
+
+load_dotenv(BASE_DIR / ".env")
+
+SECRET_KEY = os.getenv("SECRET_KEY")
+
+DEBUG = os.getenv("DEBUG") == "True"
+
+ALLOWED_HOSTS = os.getenv("ALLOWED_HOSTS").split(",")
+```
+
+12. docker-compose.yml 수정 (.env 만 추가)
+```
+version: "3.9"
+
+services:
+  web:
+    build: .
+    ports:
+      - "8000:8000"
+    volumes:
+      - .:/app
+    env_file:
+      - .env
+```
+
