판단과정_업데이트

--- a/Logis_database/v1.0_성능최적화_판단과정.md
+++ b/Logis_database/v1.0_성능최적화_판단과정.md
@@ -69,7 +69,7 @@ WHERE u.shipment_id = s.shipment_id  -- 단일 인덱스 정상 사용
 `Tuples out 낭비되는 읽기 거의 없음`
 
 > 엄청난 성능 개선이 있었지만, 대시보드 트래픽 집중 시 CPU 부담 여전히 존재함
-> 읽기 성능만 보기때문에 트레이드 오프를 해야했다
+> 읽기 성능만 보기때문에 트레이드 오프를 고려해 보니 비정규화가 더 나을 것 같다는 판단
 
 **3. 비정규화**
 
