확장시작_Google_빅쿼리

--- a/Radius_list/v1.1_문제점.md
+++ b/Radius_list/v1.1_문제점.md
@@ -16,3 +16,24 @@ postgresql 내부에서는 데이터 377개
 도커(Docker)와 로컬(Local)은 완전히 남남으로 확실하게 구분하자
 
 가상환경을 실제 환경과 동일하다고 착각하여, 당연히 달라야 정상인 두개의 DB 를 비교하였다
+
+---
+
+## 카카오맵API 의 한계
+
+1. 한 다이소 지점에서 한 카테고리(예: 카페) 당 가져올 수 있는 데이터는 최대 15개로 제한되어 있습니다
+
+> API 요청 파라미터 설정 (size 제한)
+
+- **카카오 로컬 API에서 (시스템상)한번의 요청에 최대 15개만 가져올 수 있게 되어있다.**
+
+```
+params = {
+    "category_group_code": cat_code,
+    "x": daiso_x,
+    "y": daiso_y,
+    "radius": 1000, 
+    "size": 15   # <--- 핵심 한계
+}
+```
+
