문제점업데이트

--- a/Radius_list/v1.1_문제점.md
+++ b/Radius_list/v1.1_문제점.md
@@ -36,4 +36,44 @@ params = {
     "size": 15   # <--- 핵심 한계
 }
 ```
+---
 
+## 카카오맵API 의 한계를 쪼개기 방법으로 회피
+
+> 일단 서울에 있는 모든 다이소에 대해서 다이소 전수조사를 하였습니다.
+
+> 당연히 3페이지 제한, 페이지당 15개로 제한이 되어있지만 쪼개기로 약 260개 정도의 데이터 확보에 성공했습니다.
+
+**다이소는 어떻게 다 찾았나?**
+
+**다이소 수집 성공 이유 (지역 쪼개기):**
+
+- "서울 다이소"라고 한 번에 검색하지 않았습니다.
+
+- "강남구 다이소", "서초구 다이소"... 이렇게 25번 쪼개서 검색했습니다.
+
+- 강남구 안에 다이소가 45개(3페이지)를 넘지 않기 때문에 누락 없이 다 가져올 수 있었습니다.
+
+주변 찾기 실패 이유 (반경 내 밀집도):
+
+"강남본점 다이소 반경 1km 편의점"을 검색하면, API는 중심점 기준으로 가장 가까운 순서대로 데이터를 줍니다.
+
+문제는 서울 강남역 반경 1km 안에 편의점이 100개가 넘는다는 것입니다.
+
+카카오 API는 **"45등까지만 보여줄게. 46등부터는 안 보여줘(페이지 없음)"**라고 딱 잘라버립니다.
+
+"강남구"처럼 지역을 나눌 수도 없고, 오직 "반경(Radius)" 조건만 있기 때문에 45개 이상의 데이터를 가져올 방법이 막히는 것입니다.
+
+---
+
+## 또 맞이한 한계(API 요청 제한) 1번 방법 응용으로(쪼개기) 주변 편의점, 카페 찾기는 실패
+
+**주변 찾기 실패 이유 (반경 내 밀집도):**
+
+ "강남본점 다이소 반경 1km 편의점"을 검색하면, API는 중심점 기준으로 가장 가까운 순서대로 데이터를 줍니다.
+
+ 문제는 서울 강남역 반경 1km 안에 편의점이 100개가 넘는다는 것입니다.
+
+ 카카오 API는 **"45등까지만 보여줄게. 46등부터는 안 보여줘(페이지 없음)"**라고 딱 잘라버립니다.
+
+ "강남구"처럼 지역을 나눌 수도 없고, 오직 "반경(Radius)" 조건만 있기 때문에 45개 이상의 데이터를 가져올 방법이 막히는 것입니다.
