--- a/Radius_list/v2.1_확장시작_한계점_돌파.md
+++ b/Radius_list/v2.1_확장시작_한계점_돌파.md
@@ -94,11 +94,17 @@ googleapis-common-protos==1.72.0
 이런식으로 나타난다
 (과정 확인하도록)
 ```
-## 이제 어떻게 가져와서 가공할지 고민...
 
 ---
 
+## 구글 빅쿼리 (OSM 데이터의 문제점 직면)
 
+쿼리 성능은 정말 뛰어나지만,
+OSM 데이터가 너무 없다..
+
+
+---
+////////
 
 3. 파이썬(Django)으로 가져와서 내 DB에 저장하기 (Backend Integration)
 이제 이걸 코드로 가져오는 게 백엔드 엔지니어가 할 일입니다. v2.1 아키텍처의 Extract 부분을 구현하는 코드입니다.
