--- a/Radius_list/v1.0-v2.1/v2.1_확장성고려.md
+++ b/Radius_list/v1.0-v2.1/v2.1_확장성고려.md
@@ -1,111 +1,81 @@
-## 1. Project Background & Previous Architecture
+##  v2.1 확장성 고려 및 아키텍처 진화
 
-초기 프로젝트(v1.0)는 **Kakao Local API**를 활용하여 특정 지점(예: 다이소) 주변의 상권 데이터를 실시간으로 수집하고 시각화하는 것에 초점을 맞췄습니다.  
-사용자가 요청할 때마다 외부 API를 호출하고, 응답받은 **소량의 데이터**를 PostGIS에 저장하는 방식이었습니다.
+> **"프로젝트가 '서울시 전체'로 확장될 때, 우리는 어떤 문제를 마주했는가?"**
 
----
-
-## 2. Technical Challenge: The Limitations of API-Based Collection
-
-프로젝트의 목표가 **“단순 위치 표시”**에서 **“상권 밀집도 분석 및 거시적 트렌드 파악”**으로 고도화되면서, 기존 API 폴링(Polling) 방식은 명확한 **세 가지 한계점(Bottlenecks)**에 직면했습니다.
-
-### 🛑 1. 데이터 수집의 한계 (Rate Limiting & Pagination)
-
-- **문제점**  
-  Kakao API는 1회 요청 시 최대 45개(15 items × 3 pages)의 데이터만 반환합니다.
-
-- **현상**  
-  서울시 전체 편의점 분포나 도로망 데이터를 확보하려면 수천 번의 HTTP 요청이 필요하며,  
-  이는 API 일일 쿼터 제한(Quota Limit) 도달 또는 수집 속도 저하를 유발합니다.
-
-- **결과**  
-  “홍대 주변”과 같은 마이크로 분석은 가능하지만,  
-  “서울시 전체”와 같은 매크로 분석에는 구조적으로 부적합했습니다.
+ v1.0에서 v2.1로 넘어가면서 직면한 **확장성(Scalability)** 문제와 이를 해결하기 위한 **기술적 의사결정(Technical Decision Making)** 과정을 기록했습니다.
 
 ---
 
-### 🛑 2. 시계열 및 과거 데이터 부재 (Lack of Historical Data)
+## 1. 기존 아키텍처(v1.0)의 한계
 
-- **문제점**  
-  API는 호출 시점의 **현재(Snapshot)** 데이터만 제공합니다.
+초기 프로젝트는 사용자가 요청할 때마다 Kakao API를 호출하는 **On-Demand** 방식이었습니다. 하지만 분석 범위가 "강남역"에서 "서울시 전체"로 확장되자, 명확한 한계점들이 드러났습니다.
 
-- **현상**  
-  “지난달 대비 유동 인구 변화” 또는  
-  “특정 시간대의 교통 체증 패턴”과 같은 시계열 분석이 불가능합니다.
+### 🔺 Bottleneck 1: 데이터 수집의 물리적 한계
+- **Rate Limit**: Kakao API는 1회 호출 시 **최대 45개** (15개 x 3페이지) 데이터만 제공합니다.
+- **Problem**: 서울시 전체 편의점은 수천 개입니다. 이를 수집하려면 수백 번의 API 호출이 필요하며, 이는 **속도 저하**와 **Quota 제한** 위험을 초래합니다.
 
-- **결과**  
-  데이터가 정적(Static)이며,  
-  인사이트 도출을 위한 트렌드 분석에 한계가 존재했습니다.
-
----
-
-### 🛑 3. 분석 쿼리의 비효율성 (Query Inefficiency)
-
-- **문제점**  
-  외부 API 의존 구조에서는 데이터를 내부 DB로 가져오기 전까지  
-  필터링(Filter)이나 집계(Aggregation)를 수행할 수 없습니다.
-
-- **결과**  
-  불필요한 데이터까지 모두 네트워크를 통해 수신해야 하며,  
-  대역폭 낭비 및 처리 지연(Latency)이 발생합니다.
+### 🔺 Bottleneck 2: 거시적 분석 불가
+- **Snapshot Data**: API는 호출 시점의 데이터만 줍니다. "지난달과 비교해서 상권이 어떻게 변했나?" 같은 **시계열 분석**이 불가능합니다.
+- **Lack of Insight**: 단순 위치 표시는 가능하지만, "서울시 편의점 밀집도 Heatmap" 같은 **거시적 통계**를 내기 어렵습니다.
 
 ---
 
-## 3. Solution: Integrating Google BigQuery Public Datasets
+## 2. 확장성 확보를 위한 첫 번째 시도: Google BigQuery (OSM)
 
-위 한계를 극복하기 위해 **Google BigQuery Public Datasets**를 도입하여  
-전체 아키텍처를 재설계했습니다.
+이 문제를 해결하기 위해, 우리는 **"API를 버리고, 이미 모아진 데이터를 쓰자"**는 아이디어를 냈습니다.
 
-BigQuery는 페타바이트(PB)급 데이터를 수 초 내로 처리할 수 있으며,  
-OpenStreetMap(OSM), 교통량 데이터 등 대규모 공개 데이터를 **SQL 기반으로 즉시 조회**할 수 있습니다.
+### Idea: "전 세계 데이터를 쿼리 한 번으로?"
+**Google BigQuery**에 있는 **OpenStreetMap(OSM)** 퍼블릭 데이터셋을 활용하면, 서울시 전체 데이터를 단 몇 초 만에 가져올 수 있을 것이라 기대했습니다.
 
-### ✅ Key Improvements
+### 기대했던 아키텍처 (Proposed v2.0)
+```
+    A[Use Request] -->|No API Call| B(Local DB);
+    subgraph Data Pipeline
+    C[Google BigQuery (OSM)] -->|Bulk Export| D[Python ETL];
+    D -->|Coordinate Transfrom| B;
+    end
+```
 
-- **Bulk Data Processing**  
-  API 페이지네이션 없이 SQL 쿼리 한 번으로  
-  수백만 건 이상의 지리 데이터(Polygon, LineString)를 추출할 수 있습니다.
-
-- **Advanced Spatial Analysis**  
-  단순 반경 검색을 넘어,  
-  BigQuery 단계에서 사전 전처리(Pre-processing) 및 필터링을 수행하여  
-  백엔드로는 최소한의 정제된 데이터만 전달합니다.
-
-- **Scalability**  
-  분석 범위를 도시 단위에서 국가 단위로 확장하더라도  
-  아키텍처 변경 없이 대응 가능합니다.
+- **장점 1 (Bulk Processing)**: API 페이지네이션 없이 SQL 쿼리 한 큐에 수만 건 수집 가능.
+- **장점 2 (Scalability)**: 서울뿐만 아니라 도쿄, 뉴욕 등 전 세계로 즉시 확장 가능.
 
 ---
 
-## 4. New Data Pipeline Architecture (v2.0)
+## 3. 현실의 벽: 데이터 품질 (Data Quality)
 
-기존의 **동기식 API 호출 중심 구조**를  
-**ETL(Extract, Transform, Load) 파이프라인** 형태로 고도화했습니다.
+하지만 실제로 빅쿼리를 돌려보니 치명적인 문제가 발견되었습니다.
 
-### 🛠️ Process Flow
+| 비교 항목 | PostGIS (Kakao API 기반) | BigQuery (OSM 기반) |
+|---|---|---|
+| **서울시 다이소 수** | **약 260개** (정확함) | **약 60개** (누락 심각) |
+| **편의점 데이터** | 골목 상권까지 커버 | 대로변 위주, 소규모 점포 누락 |
+| **결론** | **Adopt (채택)** | **Drop (기각)** |
 
-- **Extract (BigQuery)**  
-  `bigquery-public-data.geo_openstreetmap` 등의 테이블에서  
-  분석 대상 지역(예: Seoul)의 건물, 도로 데이터를 SQL로 추출합니다.
+> **"도구(Tool)가 아무리 좋아도, 원천 데이터(Source Data)가 좋지 않으면 무용지물이다."**
 
-- **Transform (Python)**  
-  추출된 데이터를 Pandas / GeoPandas로 처리하여  
-  결측치 정제 및 **H3 (Uber Hexagonal Index)** 변환을 수행합니다.
-
-- **Load (PostGIS)**  
-  전처리가 완료된 데이터를 PostGIS에 적재하고  
-  공간 인덱스(GiST)를 생성하여 조회 성능을 최적화합니다.
-
-- **Serve (Django)**  
-  프론트엔드 요청 시 복잡한 연산 없이  
-  PostGIS의 공간 쿼리를 통해 즉각적인 응답을 제공합니다.
+결국 BigQuery는 **확장성**은 좋지만 **정확성**이 떨어져, 상권 분석용으로는 부적합하다는 결론을 내렸습니다.
 
 ---
 
-## 📝 Conclusion
+## 4. 최종 해결책: "Divide and Conquer" (PostGIS + Advanced API)
 
-본 프로젝트의 아키텍처 변화는 단순한 기술 스택 교체가 아니라,  
-**“외부 API 의존적인 서비스”**에서  
-**“데이터 주권(Data Sovereignty)을 보유한 분석 플랫폼”**으로의 진화를 의미합니다.
+우리는 **데이터의 정확도(Kakao)**와 **분석의 확장성(PostGIS)**을 모두 잡는 하이브리드 방식을 택했습니다.
 
-이를 통해 대용량 공간 데이터 처리 역량을 확보하였으며,  
-보다 정교하고 확장 가능한 상권 분석 서비스를 구현할 수 있었습니다.
+### 🔹 v2.1 Final Architecture
+
+**1. 수집 단계 (Collection): 정교한 분할 정복**
+- "서울"을 한 번에 부르지 않고, **25개 자치구**로 쪼개서 호출 (Coverage 확보).
+- 반경 검색 시 **4분면(Quadrant)**으로 쪼개서 45개 제한 우회 (Density 확보).
+
+**2. 저장 단계 (Storage): PostGIS 활용**
+- API로 힘들게 모은 데이터를 휘발시키지 않고 **PostGIS**에 적재.
+- 이제 "강남역 반경 1km" 검색 시 API를 부르지 않고, **내 DB에서 SQL `ST_DWithin`**으로 0.01초 만에 응답.
+
+### 🔹 결과 (Impact)
+- **정확도**: 카카오의 고품질 데이터 100% 활용.
+- **성능**: 초기 수집(ETL)은 느리지만, 실제 서비스(Service) 속도는 Real-time 수준으로 향상.
+- **분석**: 내 DB에 데이터가 있으므로 시계열 분석, 밀집도 분석 가능.
+
+---
+
+이러한 과정을 통해, API 래퍼(Wrapper)였던 프로젝트가 **"자체 데이터를 보유한 분석 플랫폼"**으로 진화하게 되었습니다.
