--- a/Radius_list/v1.0-v2.1/v2.1_확장시작_한계점_돌파.md
+++ b/Radius_list/v1.0-v2.1/v2.1_확장시작_한계점_돌파.md
@@ -1,112 +1,85 @@
-## 구글의 전세계 데이터 건드려보기 (OpenStreetMap(OSM) 공개 데이터)
+# 🔹 v2.1 확장 시작 및 한계점 돌파
 
-1. Step 1. 구글 클라우드 콘솔 접속 (무료 샌드박스)
+> **"45개라는 숫자의 벽을 어떻게 뛰어넘었는가?"**
 
-> Google Cloud Console에 접속합니다. (구글 아이디만 있으면 됩니다)
+ 프로젝트 진행 중 마주친 가장 큰 기술적 난관인 **"데이터 수집 한계"**를 극복하기 위한 저희의 시도와 최종 해결책을 상세히 기술합니다.
 
-- 프로젝트를 하나 생성합니다 (My project)
+---
 
-카드 등록을 안 해도 Sandbox 모드로 일정량 무료 쿼리가 가능한 상황
+## 1. 첫 번째 시도: Global Scale 접근 (BigQuery Experiment)
 
-- **구글 빅쿼리 테스트**
-```
-SELECT COUNT(*) 
-FROM `bigquery-public-data.geo_openstreetmap.planet_features`;
-```
-웹에서 실행했을때 **결과나오면 바로 빅쿼리 API 활성화** 된 것입니다
+"API 제한이 싫다면, API를 안 쓰면 되지 않을까?"라는 생각으로 구글의 전 세계 데이터를 직접 건드려 보았습니다.
 
-> 전 세계 공간 데이터를 내 DB로 끌어오는 파이프라인을 만들어본다!
+### 1-1. Google BigQuery & OSM 도전
+구글 클라우드 콘솔의 Sandbox(무료) 환경을 이용하여 `bigquery-public-data.geo_openstreetmap.planet_features` 테이블에 접근했습니다.
 
-2. Step 2. "서울시 모든 카페" 쿼리 보내보기
-콘솔 중앙의 **[쿼리 편집기]**에 아래 SQL을 복사해서 붙여넣고 실행(Run) 버튼을 누르기 (이 테이블은 전 세계 데이터를 다 가지고 있어서 planet_features라고 부릅니다)
-
-SQL
-```
+**실행한 SQL (서울시 카페 찾기):**
+```sql
 SELECT
   osm_id,
-  (
-    SELECT value
-    FROM UNNEST(all_tags)
-    WHERE key = 'name'
-    LIMIT 1
-  ) AS name,
+  (SELECT value FROM UNNEST(all_tags) WHERE key = 'name' LIMIT 1) AS name,
   geometry
 FROM `bigquery-public-data.geo_openstreetmap.planet_features`
 WHERE
-  ('amenity', 'cafe') IN (
-    SELECT AS STRUCT key, value FROM UNNEST(all_tags)
-  )
-  AND ST_INTERSECTSBOX(
-    geometry,
-    126.7, 37.4,
-    127.3, 37.7
-  )
+  ('amenity', 'cafe') IN (SELECT AS STRUCT key, value FROM UNNEST(all_tags))
+  AND ST_INTERSECTSBOX(geometry, 126.7, 37.4, 127.3, 37.7) -- 서울 좌표 범위
 LIMIT 100;
 ```
-> name 으로만 쓰고싶지만, name이라는 최상위 컬럼이 존재하지 않는다 그러므로 all_tag로 뽑아준다
-> OSM 데이터에서 이름은 보통: all_tags (key-value 배열) 안에 ("name", "스타벅스") 같은 형태로 들어있다
 
-- **결과: 순식간에 서울/경기권 카페 100개의 ID, 이름, 좌표가 뜹니다.**
-**+구글은 시각화로 지도에서 바로 표현가능**
-
-느낀점 : "와, API 루프 안 돌려도 데이터가 그냥 있네?"
-
-**geometry 컬럼 설명**
-
-- Geometry에 들어있는 것
-
-> POINT / POLYGON / LINESTRING 로 되어있다
-> POINT → 단일 좌표 (대부분 카페)
-> POLYGON → 건물 전체 면적
-> LINESTRING → 길쭉한 구조물
+### 1-2. 결과 및 좌절 (The Limitation)
+- **Technical Success**: 쿼리는 성공적이었고, 순식간에 데이터를 가져왔습니다. 파이썬 스크립트도 연동했습니다.
+- **Business Failure**: 하지만 **데이터가 너무 적었습니다.**
+    - 서울시내 다이소: 실제 약 260개 vs OSM 데이터 약 60개.
+    - **결론**: "기술적으로는 멋지지만, 비즈니스 데이터로는 쓸 수 없다."
 
 ---
 
-### 직면한 문제!
+## 2. 두 번째 시도: 다시 API로, 하지만 더 정교하게 설계!
 
-- 현재 구조인 Django / PostGIS에 바로 넣기 어려움
+저희는 다시 **Kakao API**로 돌아왔습니다. 하지만 v1.0처럼 무식하게 호출하지 않았습니다. 저희는 **알고리즘적 접근**으로 API의 한계를 우회했습니다.
 
-- 중심점(CENTROID) 을 뽑아야 할 것 같다
+### 2-1. 문제 재정의: "45개 제한(Pagination Limit)"
+카카오 API는 반경 검색 시, 결과가 아무리 많아도 **상위 45개(15개x3페이지)**까지만 보여주고 나머지는 잘라버립니다.
+- "강남역 반경 1km 편의점" -> 100개 넘게 있지만 45개만 리턴 -> **데이터 누락 발생!**
+
+### 2-2. 해결책: 4분할 탐색 (Quadrant Search Strategy)
+저희는 1km 원을 한 번에 요청하는 대신, **4개의 부채꼴(또는 사각형)**로 쪼개서 요청했습니다.
+
+> **"큰 그물로 한 번에 못 건지면, 작은 그물로 네 번 건지자."**
+
+#### 🔹 알고리즘 로직 !!
+1. **Target**: 다이소 강남본점 (중심점 `center_x`, `center_y`)
+2. **Action**: 반경을 4등분하여 각각 좌표를 미세하게 조정해 호출.
+    - **Sector 1 (북동)**: 중심점에서 약간 북동쪽으로 이동한 지점 기준 500m
+    - **Sector 2 (북서)**: 중심점에서 약간 북서쪽으로 이동한 지점 기준 500m
+    - **Sector 3 (남동)**: ...
+    - **Sector 4 (남서)**: ...
+    *(실제 구현에서는 `rect` 범위를 쪼개거나, 중심점을 이동시켜 겹치게 호출)*
+
+#### 🔹 중복 제거 !!
+이렇게 쪼개서 수집하면 경계선 부근의 편의점은 2~3번 중복 수집됩니다.
+- **Solution**: `update_or_create`
+- DB에 저장할 때 `(가게이름, 주소)`가 같으면 **건너뛰거나 업데이트**하여 유니크함(Uniqueness)을 보장했습니다.
 
 ---
+
+## 3. 최종 결과 (Result)
+
+이 "삽질"의 과정을 통해 저희는 다음과 같은 성과를 얻었습니다.
+
+1. **서울시 전수 조사 완료**: 25개 구 분할 검색으로 서울시 내 모든 다이소(약 260개) 위치 확보.
+2. **누락 없는 주변 상권**: 4분할 전략으로 강남/홍대 등 밀집 지역에서도 편의점 데이터를 100개 이상씩(45개 제한 돌파) 수집 성공.
+3. **자체 DB 구축**: 이 모든 데이터를 PostGIS에 저장하여, 더 이상 외부 API에 의존하지 않는 저희만의 **상권 지도 DB**를 완성.
+
+---
+**[참고 코드: Python BigQuery 연동 시도 흔적]**
+(시도했다가 폐기한, 하지만 값진 경험이었던 코드)
+```python
+# pip install google-cloud-bigquery db-dtypes
+from google.cloud import bigquery
+def fetch_seoul_cafes():
+    client = bigquery.Client()
+    query = "..." # (위의 SQL 참조)
+    df = client.query(query).to_dataframe()
+    return df
 ```
-1️⃣ web 컨테이너 접속
-docker-compose exec web bash
-
-2️⃣ 설치
-pip install google-cloud-bigquery db-dtypes
-
-3️⃣ requirements.txt 다시 생성
-pip freeze > requirements.txt
-
-4️⃣ 확인
-grep google requirements.txt
-
-4번 하면 
-google-api-core==2.28.1
-google-auth==2.45.0
-google-cloud-bigquery==3.39.0
-google-cloud-core==2.5.0
-google-crc32c==1.8.0
-google-resumable-media==2.8.0
-googleapis-common-protos==1.72.0
-
-이런식으로 나타난다
-(과정 확인하도록)
-```
-
----
-
-## 구글 빅쿼리 (OSM 데이터의 문제점 직면)
-
-- 쿼리 성능은 정말 뛰어나지만, OSM 데이터가 너무 없다..
-
-> 데이터 많이 부족(서울 시내 다이소만 260개 정도 되는데, OSM 데이터는 60개 정도.)
-
-**다시 카카오맵API 호출로 서울시 모든 다이소 불러오고, 각각 다이소를 바탕으로 1km 반경으로 편의점 및 카페 데이터를 가져왔습니다.**
-
-**각각 저장된 데이터는 admin에서도 확인가능하고, DB를 통해 PostgreSQL(PostGIS)에 저장되었습니다**
-
-
-
----
