--- a/Radius_list/v1.0-v2.1/v2.1_방향성.md
+++ b/Radius_list/v1.0-v2.1/v2.1_방향성.md
@@ -1,42 +1,43 @@
-## A. 카카오 API 이용 (판단:  가능하지만 불완전함)
-기능: 특정 좌표(다이소) 기준 반경 x 미터 내의 카테고리(편의점 CS2, 카페 CE7) 검색이 가능합니다.
+# 프로젝트 방향성 검토: 위치 데이터 수집 및 분석
 
-치명적 단점 (45개 제한): 카카오 API는 한 번 검색에 **최대 45개(15개씩 3페이지)**까지만 결과를 보여줍니다.
+## 1. 기술 검토 및 한계점
 
-현실: 서울 강남역 다이소 반경 1km 안에는 편의점과 카페가 수백 개가 넘습니다. 카카오 API를 쓰면 **"가장 가까운 45개"**만 가져오고 나머지는 잘립니다.
+### A. 카카오 API 이용
+- **기능**: 특정 좌표(예: 다이소) 기준 반경 x 미터 내의 특정 카테고리(편의점, 카페 등)를 검색.
+- **치명적 한계**: **최대 45개**(15개씩 3페이지)의 결과만 반환됨.
+- **현실적인 문제**: 서울 강남역 등 밀집 지역은 반경 1km 내에 편의점/카페가 수백 개 존재하므로, API 사용 시 **"가장 가까운 45개"**만 수집되고 나머지는 누락됨.
+- **판단**: 단순 주변 탐색 용도로는 적합하나, **완전한 상권 데이터 분석**에는 데이터 누락으로 인해 부적합함 (가능하지만 불완전).
 
-결론: "주변에 뭐가 있나?" 정도는 괜찮지만, "모두 찾아서 상권 분석"을 하기엔 데이터가 빕니다.
-
----
-
-## B. 구글 빅쿼리 (판단: X 데이터가 없음)
-
-오해: 빅쿼리는 엄청나게 빠른 **계산기(DB)** 이지, 지도 데이터(편의점 위치 정보)를 가지고 있는 지도 서비스가 아닙니다.
-
-필요조건: 빅쿼리에서 분석하려면, 님께서 이미 **"서울시 전체 편의점/카페 좌표 데이터(수만 개)"**를 가지고 있어야 합니다. 그 데이터를 빅쿼리에 넣고 다이소 좌표랑 매칭하는 것입니다.
-
-결론: 편의점 위치 데이터를 수집하기 전에는 빅쿼리는 무용지물입니다.
+### B. 구글 빅쿼리 (Google BigQuery)
+- **빅쿼리**: 빅쿼리는 강력한 **데이터 분석/연산 도구(DB)**이지, 자체적으로 지도 데이터(상점 위치 등)를 보유한 서비스가 아님.
+- **필수 전제 조건**: 분석을 위해서는 이미 **"전체 상점 좌표 데이터"**를 보유하고 있어야 함. (빅쿼리에 데이터를 넣고 쿼리하는 구조)
+- **판단**: 편의점 위치 데이터가 없는 상태에서는 사용 불가능.
 
 ---
 
-## 해결 전략
-가장 현실적인 방법은 두 가지입니다.
+## 2. 해결 전략
 
-카카오 API 활용 (현재 방식 유지): "모두"는 포기하고, **"반경 내 가장 가까운/중요한 45개 매장"** 만 수집해서 지표로 삼는다. (초보자에게 추천)
+상황에 따른 두 가지 현실적인 접근 방법입니다.
 
-공공데이터포털 활용 (고급): [소상공인시장진흥공단_상가(상권)정보] 데이터를 다운받아 서울시 전체 카페/편의점 데이터를 내 DB(PostGIS)에 다 넣고, DB 자체 기능(ST_DWithin)으로 쿼리한다. (이게 정석입니다.)
+### 전략 1: 카카오 API 활용 (현재 방식 유지)
+> **"데이터의 완벽함보다는 편의성을 추구할 때"**
+- **접근**: 모든 데이터를 수집하는 것을 포기하고, **"반경 내 가장 가깝고 중요한 45개 매장"**만 지표로 삼음.
+- **추천 대상**: 빠르고 간단하게 프로토타입을 만들거나 결과를 보고 싶은 경우 (초보자 추천).
+
+### 전략 2: 공공데이터포털 활용 (정석 느낌)
+> **"전체 데이터 분석이 필요할 때"**
+- **접근**: [공공데이터포털 정보] 데이터를 다운로드하여 서울시 전체 카페/편의점 데이터를 확보.
+- **구현**: 확보한 데이터를 내 DB(PostGIS 등)에 적재 후, DB 자체 공간 함수(ST_DWithin)를 통해 쿼리.
+- **장점**: 데이터 누락 없이 정확한 전체 상권 분석 가능.
+
 ---
 
-#### 빅쿼리를 꼭 쓰고 싶다면?
+## 3. 빅쿼리를 활용한 대용량 분석 시나리오
 
-만약 "나는 45개 제한이 너무 싫고, 빅쿼리로 대용량 분석을 하고 싶다"면 흐름은 이렇습니다.
+데이터 제한 없이 빅쿼리의 성능을 활용?
 
-공공데이터포털에서 "소상공인시장진흥공단_상가(상권)정보" CSV 다운로드 (몇백 MB).
-
-이 CSV를 빅쿼리 테이블로 업로드 (seoul_all_stores).
-
-현재 수집한 다이소 데이터를 CSV로 뽑아서 빅쿼리에 업로드 (my_daiso).
-
-빅쿼리 SQL 콘솔에서 ST_DISTANCE 함수를 써서 조인.
-
-이 방법은 데이터 수집(ETL) 파이프라인이 복잡
+1.  **데이터 확보**: 공공데이터포털에서 "서울시 휴게음식점 인허가 정보" CSV 다운로드
+2.  **전체 데이터 적재**: 확보한 CSV를 빅쿼리 테이블로 업로드
+3.  **타겟 데이터 적재**: 수집한 다이소 좌표 데이터를 CSV로 만들어 빅쿼리에 업로드
+4.  **분석 수행**: 빅쿼리 SQL 콘솔에서 `ST_DISTANCE` 등의 지리 공간 함수를 사용하여 두 테이블 조인 및 분석
+    > 해당 시나리오는 구상단계 및 방향성 정하기에서 세운 시나리오
